// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notes delete note w/children 1`] = `
Array [
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes query query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-s9SLEl5MWAbN/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "304a3321-d5da-4f1d-9590-fe530007bee4",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-s9SLEl5MWAbN/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "912fc0ca-cdc5-4b70-b759-50bae3184d87",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-UAvIra435Huq/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-UAvIra435Huq/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "912fc0ca-cdc5-4b70-b759-50bae3184d87",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-UAvIra435Huq/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root: root note 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "cc0668b8-d333-4ba1-8ac2-068c3c828a5c",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-VgXduiOkwID4/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 1`] = `
Object {
  "data": Array [
    Object {
      "note": Object {
        "body": "[[baz]]

",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "bar",
        "id": "bar",
        "links": Array [
          Object {
            "alias": "baz",
            "from": Object {
              "fname": "bar",
              "id": "bar",
            },
            "original": "baz",
            "pos": Object {
              "end": 7,
              "start": 0,
            },
            "to": Object {
              "fname": "baz",
            },
            "type": "wiki",
            "value": "baz",
          },
        ],
        "parent": "b1a1e915-a0cd-4bf7-99c6-ff66f8e433b5",
        "title": "Bar",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-eVA4ZK6Au9Yg/vault",
        },
      },
      "status": "update",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo",
        "id": "foo",
        "links": Array [],
        "parent": null,
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-eVA4ZK6Au9Yg/vault",
        },
      },
      "status": "delete",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "baz",
        "id": "foo",
        "links": Array [],
        "parent": "b1a1e915-a0cd-4bf7-99c6-ff66f8e433b5",
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-eVA4ZK6Au9Yg/vault",
        },
      },
      "status": "create",
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 2`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes rename/ domain with no children, update exsiting node: changed 1`] = `
Array [
  Object {
    "note": Object {
      "body": "[[gamma]]

",
      "children": Array [],
      "created": "1",
      "data": Object {},
      "desc": "",
      "fname": "alpha",
      "id": "alpha",
      "links": Array [
        Object {
          "alias": "gamma",
          "from": Object {
            "fname": "alpha",
            "id": "alpha",
          },
          "original": "gamma",
          "pos": Object {
            "end": 9,
            "start": 0,
          },
          "to": Object {
            "fname": "gamma",
          },
          "type": "wiki",
          "value": "gamma",
        },
      ],
      "parent": "bd2e5aeb-1f82-4d2f-8fd2-5cf5ddfc3ef8",
      "title": "Alpha",
      "type": "note",
      "updated": "1",
    },
    "status": "update",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "beta",
      "id": "beta",
      "links": Array [],
      "parent": null,
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-t7YeVMhQY5B7/vault",
      },
    },
    "status": "delete",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "gamma",
      "id": "beta",
      "links": Array [],
      "parent": "bd2e5aeb-1f82-4d2f-8fd2-5cf5ddfc3ef8",
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-66049-t7YeVMhQY5B7/vault",
      },
    },
    "status": "create",
  },
]
`;

exports[`schema write simple schema 1`] = `
"version: 1
imports: []
schemas:
  - id: pro
    children: []
    title: pro
    parent: root
"
`;
